# matmake3

./: .gitmodules  CMakeLists.txt  README.md
demos/02-multiple-files/src/: himom.cpp  himom.h  main.cpp
demos/03-modules/data/: Readme.md
demos/03-modules/src/: main.cpp  other.cppm
demos/04-opengl/: main.cpp
demos/05-import-includes/: README.md  apa.cpp  apa.h  bepa.cppm  main.cpp
demos/06-virtual-classes/: base.cppm  derived.cppm  main.cpp
demos/07-buildscript/: build.mm3  unused.cpp
demos/07-buildscript/include/: test.h
demos/07-buildscript/src/: main.cpp  other.cppm
demos/basic/src/: main.cpp
lib/: CMakeLists.txt
src/: build.cpp  build.h  buildcontext.h  buildpaths.h  commandlisit.h  commandstream.h  compilationdatabas.cpp  compilationdatabase.cpp  compilationdatabase.h  createrecursive.cpp  createrecursive.h  deps.cpp  deps.h  file.h  filter.cpp  filter.h  glob.cpp  glob.h  index.cpp  index.h  log.h  luascript.cpp  luascript.h  main.cpp  matmakelua.cpp  matmakelua.h  ninja.cpp  ninja.h  settings.h  target.h  uniqueid.h
